css accueil responsive

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -38,6 +38,7 @@
                     <li class="nav__item menu__responsive" id="menu__responsive">
                         <a href="#">Menu</a>
                     </li>
+                    <div class="menu__responsive-items">
                     <li class="nav__item nav_item_responsive show__menu">
                         <a href="/" class="nav_link">Accueil</a>
                     </li>
@@ -50,6 +51,7 @@
                     <li class="nav__item nav_item_responsive show__menu">
                         <a href="/cart" class="nav_link">Panier</a>
                     </li>
+                    </div>
                 </ul>
             </nav>
 
