--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
     --button-brown:#c7b093; 
     --button-text:#ffffff;
     --lighter-brown:#f5ecec; 
+    --body-color:#d5cbb3;
     --font-text: "Raleway", sans-serif;
     --second-font-text: "Cormorant Garamond", serif;
 }
@@ -12,16 +13,19 @@
 body {
     font-family:var(--font-text);
     color: var(--main-brown);
+    background: var(--body-color);
+
 }
 
 .container{
     max-width : 1200px;
     margin: auto;
+    background-color: var(--lighter-brown);
 }
 
 .footer{
     text-align: center;
-    padding: 0 0 3em;
+    padding:  1em;
 }
 
 .header, .header__logo{
@@ -46,6 +50,7 @@ body {
     display: flex;
     gap: 1em;
     font-size: 0.85em;
+    margin-right: 0.7em;
 }
 
 .menu__responsive{
@@ -54,9 +59,11 @@ body {
 
 .logo__title{
     color: var(--dark-brown);
+    font-family:var(--second-font-text);
     font-size: 2em;
-    font-weight: 400;
-    letter-spacing: 0.1em;
+    font-weight: 300;
+    text-shadow: -1px 3px 3px #23130761;
+    
 }
 
 .logo__srv, .logo__title{
@@ -154,7 +161,7 @@ body {
     position: absolute;
     top: 50%;
     z-index: 3;
-    background-color:  #cdcdcaa4;
+    background-color:  #cdcdcab0;
     padding:1em 1.2em 1.5em;
 }
 
@@ -385,12 +392,28 @@ body {
 
 
 @media (max-width: 768px) {
+    body, .header{
+        background-color: var(--lighter-brown);
+    }
+    
     .header{
         display:block;
+        height:auto;
     }
 
     .header__logo{
-        justify-content: center;
+        display:flex;
+        justify-content: flex-start;
+        gap:0;
+    }
+
+    .presentation{
+        height:80vh;
+    }
+
+    .news{
+        height:auto;
+        margin-bottom:2em;
     }
 
     .nav__list{
@@ -398,21 +421,38 @@ body {
         flex-direction: column;
         align-items: center;
         margin-top: 1.5em;
+        font-size: 1.2em;
     }
 
     .menu__responsive{
         display:block;
     }
 
+    .menu__responsive-items{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5em;
+    }
+
     .show__menu{
         display:none;
     }
 
+    .article__text__container{
+        top: 0;
+        height: 100%;
+    }
+   
+
 }
 
 @media (max-width: 576px){
+
+    body, .container, .header{
+        background-color: var(--lighter-brown);
+    }
+
     .header{
-        display:block;
         position:static;
     }
 
@@ -432,7 +472,7 @@ body {
         font-size:1.5em;
     }
 
-    .section{
+    .news{
         margin-top: 3em;
     }
 
@@ -441,10 +481,13 @@ body {
         flex-direction: column;
         align-items: center;
         margin-top: 1.5em;
+        font-size:1em;
+    
     }
 
     .menu__responsive{
         display:block;
+        font-size:1.2em;
     }
 
     .show__menu{
@@ -459,21 +502,30 @@ body {
         margin-top: 4em;
     }
 
-    .presentation__about__text{
-        margin-bottom: 2.5em;
-    }
-
     .articles{
         flex-direction: column;
         align-items: center;
     }
 
-    .article{
-        width: 60%;
+     .article{
+        aspect-ratio: unset;
+        flex: 0 0 auto;
+        width: 19em;
+        height: 19em;
         margin: 1.2em 0 2em;
+    }
+    .article__text__container{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
     }
 
     .article__description{
         margin: 1em 0 2.2em;
+    } 
+
+    .article__btn__container{
+        margin-top: 3em;
     }
 }
