--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ body {
     gap: 4%;
 }
 
-.nav__list{
+.menu__responsive-items{
     display: flex;
     gap: 1em;
     font-size: 0.85em;
@@ -422,6 +422,7 @@ body {
         align-items: center;
         margin-top: 1.5em;
         font-size: 1.2em;
+        margin-bottom:1.5em;
     }
 
     .menu__responsive{
@@ -429,6 +430,8 @@ body {
     }
 
     .menu__responsive-items{
+        margin-top : 1em;
+        margin-bottom: 1em;
         display: flex;
         flex-direction: column;
         gap: 0.5em;
@@ -472,6 +475,9 @@ body {
         font-size:1.5em;
     }
 
+    .presentation{
+        height:70vh;
+    }
     .news{
         margin-top: 3em;
     }
@@ -488,6 +494,10 @@ body {
     .menu__responsive{
         display:block;
         font-size:1.2em;
+    }
+
+    .menu__responsive-items{
+        margin-bottom: 0;
     }
 
     .show__menu{
