--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ body {
     justify-content: space-between;
     position:sticky;
     top:0;
-    background-color: #ffffff;
+    background-color: var(--lighter-brown);
 }
 
 
@@ -151,9 +151,8 @@ body {
 }
 
 .article{
-    width:30%;
+    width:32%;
     position: relative;
-    flex:1;
     aspect-ratio: 1/1;
 }
 
@@ -225,8 +224,8 @@ body {
 
 .catalog__title{
     width: 100%;
-    height:30em;
-    background-image: url("/img/coffees/105589090.png");
+    height:20em;
+    background-image: url("/img/about.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -239,9 +238,18 @@ body {
     color: var(--lighter-brown);
 }
 
+.catalog__title .section__title{
+    text-shadow : 1px 1px 3px var(--dark-brown);
+}
+
 .catalog__articles{
     padding: 0 4%;
 }
+
+#articles__container::after{
+    content: '';
+    flex: auto;
+} 
 
 .show__more{
     display:none;
@@ -249,6 +257,7 @@ body {
 
 .show__more__btn{
     margin-top:1em;
+    padding-bottom: 2em;
     display: flex;
     justify-content: center;
 }
@@ -266,6 +275,7 @@ body {
 .catalog__select{
     display:flex;
     justify-content: flex-end;
+    padding-bottom: 0.2em;
 }
 
 .article__image{
@@ -310,6 +320,10 @@ body {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border-width: 0;
+}
+
+.cart__container{
+    height: 80vh;
 }
 
 .cart__title{
@@ -446,6 +460,9 @@ body {
         height: 100%;
     }
    
+    .catalog__articles .article{
+        width: 31.5%;
+    }
 
 }
 
@@ -517,13 +534,15 @@ body {
         align-items: center;
     }
 
-     .article{
+     .article, .catalog__articles .article{
         aspect-ratio: unset;
         flex: 0 0 auto;
         width: 19em;
         height: 19em;
         margin: 1.2em 0 2em;
     }
+
+
     .article__text__container{
         display: flex;
         flex-direction: column;
@@ -535,7 +554,25 @@ body {
         margin: 1em 0 2.2em;
     } 
 
+    .article__image{
+        height: 11em;
+        margin: 2em 4em;
+    }
+
     .article__btn__container{
         margin-top: 3em;
+    }
+
+    .recap{
+        margin: 1em;
+        width: auto;
+    }
+
+    .product__image__container{
+        display: none;
+    }
+
+    .product__title{
+        margin-left: 0 ;
     }
 }
