--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,7 +222,7 @@ body {
     margin:4%;
 }
 
-.catalog__title{
+.catalog__title, .shop__title{
     width: 100%;
     height:20em;
     background-image: url("/img/about.jpg");
@@ -234,13 +234,11 @@ body {
     align-items: center;
 }
 
-.catalog__title .section__title{
+.catalog__title .section__title, .shop__title .section__title{
     color: var(--lighter-brown);
-}
-
-.catalog__title .section__title{
     text-shadow : 1px 1px 3px var(--dark-brown);
 }
+
 
 .catalog__articles{
     padding: 0 4%;
@@ -402,6 +400,24 @@ body {
     border-radius: 2em;
     border: none;
     font-size: 0.9em;
+}
+
+.shop__container{
+    margin: 4%;
+    padding-bottom: 2em;
+}
+
+.subsection__title{
+    font-size:1.5em;
+    color:var(--dark-brown);
+    margin: 1em;
+    text-align: center;
+    font-family: var(--second-font-text);
+    font-weight:300;
+}
+
+.shop__container p{
+    margin-bottom: 1em;
 }
 
 
